--- a/smokeShop/templates/smokeShop/base.html
+++ b/smokeShop/templates/smokeShop/base.html
@@ -6,6 +6,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.6/axios.min.js" integrity="sha512-RUkwGPgBmjCwqXpCRzpPPmGl0LSFp9v5wXtmG41+OS8vnmXybQX5qiG5adrIhtO03irWCXl+z0Jrst6qeaLDtQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="https://kit.fontawesome.com/c20fdd6f62.js" crossorigin="anonymous"></script>
@@ -82,6 +85,10 @@
       </ul>
       
     </div>
+    <!-- display user name if authenticated -->
+    {% if user.is_authenticated %}
+    <p style="font-family: 'IBM Plex Serif', serif; font-size: 12px">Welcome {{ user.username }}</p>
+    {% endif %}
   </section>
   
   {% block content %}
