--- a/smokeShop/templates/smokeShop/home.html
+++ b/smokeShop/templates/smokeShop/home.html
@@ -7,5 +7,87 @@
 
 
 {% block content %}
+<div class="container">  
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="https://www.elementvape.com/media/slideshow/cache/1380x569/homepage_banners/Voopoo_Drag_4_Front_Page_Banner.jpg" alt="Los Angeles" style="width:100%;">
+      </div>
+
+      <div class="item">
+        <img src="https://cdn.shopify.com/s/files/1/0070/8286/8772/files/Funky-Republic_Desktop-Banner_1920x800_09162bca-68a6-40d7-ae63-f959d7c7a9a3_1800x.jpg?v=1675726194" alt="Chicago" style="width:100%;">
+      </div>
+    
+      <div class="item">
+        <img src="https://www.elementvape.com/media/slideshow/cache/1380x569/homepage_banners/Geek_Vape_E100_Front_Page.jpg" alt="New york" style="width:100%;">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+<div class="featured-brand">
+  <h2>FEATURED BRANDS</h2>
+</div>
+<div class="shop-by-brands">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <img src="https://www.elementvape.com/media//amasty/shopby/option_images/slider/Finest_Black_Transparent.png" alt="Element Vape">
+      </div>
+      <div class="col-md-3">
+        <img src="https://www.elementvape.com/media//amasty/shopby/option_images/slider/geek_vape_logo.jpg" alt="VooPoo">
+      </div>
+      <div class="col-md-3">
+        <img src="https://www.elementvape.com/media//amasty/shopby/option_images/slider/Uwell_Black_Transparent.png" alt="Geek Vape">
+      </div>
+      <div class="col-md-3">
+        <img src="https://www.elementvape.com/media//amasty/shopby/option_images/slider/Vaporesso_1.png" alt="Innokin">
+      </div>
+      <div class="col-md-3">
+        <img src="https://www.elementvape.com/media//amasty/shopby/option_images/slider/naked_100.jpg" alt="Innokin">
+      </div>
+      <div class="col-md-3">
+        <img src="https://www.elementvape.com/media//amasty/shopby/option_images/slider/Vapetasia_color_200x200_.png" alt="Innokin">
+      </div>
+      <div class="col-md-3">
+        <img src="https://cdn.shopify.com/s/files/1/0070/8286/8772/files/Group_25_603bd486-c12e-4d3e-9e0d-3d4ec7143b9a.png?v=1653606346" alt="Innokin">
+      </div>
+      <div class="col-md-3">
+        <img src="https://cdn.shopify.com/s/files/1/0070/8286/8772/files/vaporlax-salts-logo_1_4a167dd5-b83b-46cd-9405-26af0b028a07.png?v=1653606346" alt="Innokin">
+      </div>
+      <div class="col-md-3">
+        <img src="https://cdn.shopify.com/s/files/1/0070/8286/8772/files/Cloud-nerdz-footer-logo_1_105d4d98-6237-47fb-83c1-16758bd2f8e2.png?v=1653606346" alt="Innokin">
+      </div>
+      <div class="col-md-3">
+        <img src="https://www.elementvape.com/media//amasty/shopby/option_images/slider/slider_l_o_lost_vape.jpg" alt="Innokin">
+      </div>
+      <div class="col-md-3">
+        <img src="https://www.elementvape.com/media//amasty/shopby/option_images/slider/suorin_transparent.jpg" alt="Innokin">
+      </div>
+      <div class="col-md-3">
+        <img src="https://www.elementvape.com/media//amasty/shopby/option_images/slider/TWIST_color_200x200_.png" alt="Innokin">
+      </div>
+    </div>
+
+  </div>
+
+</div>
 
 {% endblock %}  
