--- a/smokeShop/templates/smokeShop/base.html
+++ b/smokeShop/templates/smokeShop/base.html
@@ -39,7 +39,7 @@
       <div class="loginPage">
         <ul>
           {% if user.is_authenticated %}
-          <li><a href="{% url 'checkout' %}"><i class="fa-solid fa-cart-shopping"></i></a></li>
+          <li><a href="{% url 'cart' %}"><i class="fa-solid fa-cart-shopping"></i></a></li>
           <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
           {% else %}
           <li><a href="{% url 'account_login' %}">Sign In</a></li>
