--- a/smokeShop/templates/smokeShop/home.html
+++ b/smokeShop/templates/smokeShop/home.html
@@ -29,6 +29,9 @@
       <div class="item">
         <img src="https://www.elementvape.com/media/slideshow/cache/1380x569/homepage_banners/Geek_Vape_E100_Front_Page.jpg" alt="New york" style="width:100%;">
       </div>
+      <div class="item">
+        <img src="https://cdn.shopify.com/s/files/1/0070/8286/8772/files/New_And_Improved_Draco_Desktop_1800x.jpg?v=1664558884" alt="New york" style="width:100%;">
+      </div>
     </div>
 
     <!-- Left and right controls -->
