--- a/smokeShop/static/smokeShop/style.css
+++ b/smokeShop/static/smokeShop/style.css
@@ -880,6 +880,7 @@ body{
   margin-bottom: 10px;
 }
 
+
 .productDisplay form{
   display: flex;
   justify-content: center;
@@ -891,7 +892,7 @@ body{
 .product-detail-image img{
   width: 40%;
   height: 40%;
-  margin-left: 500px;
+  margin-left: 450px;
   padding-left: 150px;
 }
 
@@ -917,4 +918,62 @@ body{
 .shop-by-brands img{
   width: 50%;
   margin: 0 10px;
+}
+
+
+/* style user review form */
+.user-review-form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 20px;
+  margin-bottom: 20px;
+}
+
+.user-review-form h3{
+  font-family: 'poppins', sans-serif;
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.user-review-form form{
+  align-items: center;
+  padding: 10px 20px;
+  margin-bottom: 20px;
+}
+
+.user-review-form form input{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.user-review-form form textarea{
+  width: 100%;
+  height: 100px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.user-review-form form button{
+  width: 50%;
+  background-color: #070707;
+  color: #fff;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.user-review-form .rating-input{
+  width: 20%;
 }
