--- a/smokeShop/templates/smokeShop/cart.html
+++ b/smokeShop/templates/smokeShop/cart.html
@@ -27,7 +27,7 @@
                 <td>{{ item.product.title }}</td>
                 <td>{{ item.quantity }}</td>
                 <td>{{ item.product.price }}</td>
-                <td>{{ item.price_total }}</td>
+                <td>{{ item.get_price_total }}</td>
                 <td>
                   <form action="{% url 'remove_from_cart' item.id %}" method="post">
                     {% csrf_token %}
@@ -35,6 +35,7 @@
                   </form>
                 </td>
               </tr>
+
             {% endfor %}
           </tbody>
         </table>
@@ -43,8 +44,8 @@
             <a href="{% url 'product' %}" class="btn btn-primary">Continue Shopping</a>
           </div>
           <div class="col-md-6">
-            <div class="float-right">
-              <h3>Total: {{ total }}</h3>
+            <div class="float-right" style="margin-left: 35%">
+              <h5>Total: {{ order.get_cart_total }}</h5>
               <a href="{% url 'checkout' %}" class="btn btn-success">Checkout</a>
             </div>
           </div>
