--- a/userApps/templates/userApps/logout.html
+++ b/userApps/templates/userApps/logout.html
@@ -1,10 +1,12 @@
 {% extends "smokeShop/base.html" %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-    <h2>You have been logged out</h2>
+    <h2 style="font-family:'poppins', sans-serif;">You have been logged out</h2>
     <div class="border-top pt-3">
-      <small class="text-muted">
-        <a href="{% url 'account_login' %}">Log in again</a>
+      <small class="text-muted" >
+        <a style="text-decoration: none;" href="{% url 'account_login' %}">Log in again</a>
       </small>
     </div>
+  
 {% endblock %}
