completed payment setup

--- a/smokeShop/templates/smokeShop/base.html
+++ b/smokeShop/templates/smokeShop/base.html
@@ -80,6 +80,8 @@
   {% block content %}
 
   {% endblock content %}
+  {% block extra_scripts %}
+  {% endblock extra_scripts %}
 
   <!-- footer -->
   <footer class="homeFooter">
