--- a/smokeShop/templates/smokeShop/cart.html
+++ b/smokeShop/templates/smokeShop/cart.html
@@ -45,7 +45,7 @@
           </div>
           <div class="col-md-6">
             <div class="float-right" style="margin-left: 35%">
-              <h5>Total: {{ order.get_cart_total }}</h5>
+              <h5>Subtotal: {{ order.get_cart_total }}</h5>
               <a href="{% url 'checkout' %}" class="btn btn-success">Checkout</a>
             </div>
           </div>
