rendered blog page

--- a/smokeShop/templates/smokeShop/base.html
+++ b/smokeShop/templates/smokeShop/base.html
@@ -65,7 +65,7 @@
         <!-- <li><a href="#" style="font-weight: bold; color: red;">NEW ARRIVALS!</a></li> -->
         <li><a class="active" href="{% url 'home' %}">Home</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
-        <li><a href="#">Blog</a></li>
+        <li><a href="{% url 'blog' %}">Blog</a></li>
 
         <li><a href="{% url 'vape_kit_category' %}">VAPE KITS</a></li>
         <li><a href="{% url 'vape_pods_category' %}">VAPE PODS</a></li>
