--- a/smokeShop/static/smokeShop/style.css
+++ b/smokeShop/static/smokeShop/style.css
@@ -1121,5 +1121,47 @@ body{
 }
 
 
-/* style the payment page */
+/* style the blog page */
+#app{
+  margin: 0 20px;
+  margin-bottom: 20px;
+}
+
+#app h2{
+  font-family: 'poppins', sans-serif;
+  font-size: 20px;
+  text-align: center;
+  margin-top: 70px;
+  margin-bottom: 20px;
+  color: #ffffff;
+
+}
+
+#app a{
+  text-decoration: none;
+  color: #070707;
+}
+
+#app img{
+  width: 50%;
+}
+
+
+#app .text-center{
+  text-align: center;
+}
+
+#app .card-header{
+  background-color: #070707;
+  color: #fff;
+  font-family: 'poppins', sans-serif;
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+#app .card-body{
+  width: 50%;
+}
+
 
