--- a/smokeShop/static/smokeShop/style.css
+++ b/smokeShop/static/smokeShop/style.css
@@ -774,6 +774,17 @@ body{
   background-color: #000000;
 }
 
+.loginPageSection .loginPage input{
+  width: 100%;
+  padding: 5px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+
 /* style the sign in or sign up links */
 .loginPage ul{
   display: flex;
@@ -807,8 +818,10 @@ body{
   color: #fff;
   transition: 0.3s ease-in-out;
   font-family: 'Lora', serif;
-  font-size: 13px;
+  font-size: 12px;
   text-align: center;
+  display: inline-block;
+  
 }
 
 .loginForm-section{
