--- a/smokeShop/templates/smokeShop/base.html
+++ b/smokeShop/templates/smokeShop/base.html
@@ -44,6 +44,10 @@
       <div class="loginPage">
         <ul>
           {% if user.is_authenticated %}
+          <form action="{% url 'search_results' %}" method="GET">
+            {% csrf_token %}
+            <input type="search" name="search" placeholder="Search...">
+          </form>
           <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
           <li><a href="{% url 'cart' %}"><i style="font-size: 30px" class="fa-solid fa-cart-shopping"></i></a></li>
           {% else %}
